Changes from jTDS 1.0
=======================

01/28/2005 - Alin Sinpalean
 o commit() and rollback() now throw SQLException if called in auto-commit
   mode, per API documentation.
 o Added checks to setAutoCommit() and setTransactionIsolation() to no longer
   submit requests to the server if already in the correct mode.

01/27/2005 - Alin Sinpalean
 o Fixed bug in CharsetInfo, caused by getClassLoader() returning null when the
   class loader is the bootstrap classloader.

===============================================================================
01/25/2005 - jTDS 1.0 released
===============================================================================

Changes from jTDS 0.9.1
=======================

01/25/2005 - Alin Sinpalean
 o Updated the HTML content and incremented the version number in both the docs
   and the code.

01/24/2005 - Alin Sinpalean
 o Minor clean-up in tests and code.

01/24/2005 - Mike Hutchinson
 o Fixed bug [1107105] Sybase updateable cursor error (a null pointer exception
   is thrown in CachedResultSet during an update).
 o Amended the logic for downgrading the preparesql property values in
   ConnectionJDBC2 as it was possible to select invalid options for Sybase and
   SQL 6.5.
 o Prevent JtdsPreparedStatement.setUnicodeStream from throwing an array index
   exception when the length of the supplied stream exceeded the declared
   length.
 o When using preparesql=0, the driver would send zero length byte arrays as
   null. This is wrong as the column should have a zero length non null value;
   however, Sybase/SQL 6.5 do not permit zero length binary columns so the
   driver has to output a single byte value instead. Amended
   Support.embedData() to fix this problem.
 o Related to the point above, TdsData.writeParam and writeTds5Param do the
   wrong thing and output a zero length byte value as a null. Amended TdsData
   to fix this problem.
 o It is possible for Support.embedData to output a decimal literal that